# rosa

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
compiler/rosa_comm/: Cargo.toml
compiler/rosa_comm/src/: lib.rs
compiler/rosa_errors/: Cargo.toml
compiler/rosa_errors/src/: lib.rs  style.rs
compiler/rosa_lexer/: Cargo.toml
compiler/rosac/: Cargo.toml
compiler/rosac/src/: main.rs
compiler/rosac_lexer/: Cargo.toml
compiler/rosac_lexer/src/: lib.rs  tokens.rs
examples/: fib.ro
internals/rosa_comm/src/: lib.rs  prelude.rs
internals/rosa_errors/: Cargo.toml
internals/rosa_errors/src/: lib.rs  prelude.rs
internals/rosac_lexer/src/: abs.rs  lib.rs  literals.rs  prelude.rs  tokens.rs
internals/rosac_parser/: Cargo.toml
internals/rosac_parser/src/: block.rs  decl.rs  expr.rs  lib.rs  precedence.rs  prelude.rs  stmt.rs  symbol.rs  types.rs
internals/rosac_sema/: Cargo.toml
internals/rosac_sema/src/: lib.rs  name.rs  prelude.rs
rosa/: Cargo.toml
rosa/src/: arith_macro.rs  inst.rs  lib.rs  main.rs
rosac/: Cargo.toml
rosac/src/: lexer.rs  main.rs  tokens.rs
