[workspace]
members = [
  "rosac",
  "internals/rosa_errors",
  "internals/rosac_lexer",
  "internals/rosa_comm",
  "internals/rosac_parser",
]

resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Thibault V. (@Larsouille25)"]

[workspace.dependencies]
rosac = { path = "rosac" }
rosac_lexer = { path = "internals/rosac_lexer"}
rosa_errors = { path = "internals/rosa_errors"}
rosa_comm = { path = "internals/rosa_comm"}

termcolor = "1.4.1"
