[workspace]
members = [
  "rosa",
  "rosac",
  "internals/rosa_comm",
  "internals/rosa_errors",
  "internals/rosac_lexer",
  "internals/rosac_parser",
  "internals/rosac_sema",
]

resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Thibault V. (@Larsouille25)"]

[workspace.dependencies]
termcolor = "1.4.1"
lazy_static = "1.4.0"

# internal libs
rosa_errors = { path = "internals/rosa_errors" }
rosa_comm = { path = "internals/rosa_comm" }
rosac = { path = "rosac" }
rosac_lexer = { path = "internals/rosac_lexer" }
rosac_parser = { path = "internals/rosac_parser" }
rosac_sema = { path = "internals/rosac_sema" }

