[package]
name = "rosac_parser"
description = "Parsing tokens into an Abstract Syntax Tree."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lazy_static.workspace = true

# internal libs
rosa_comm.workspace = true
rosa_errors.workspace = true
rosac_lexer.workspace = true
